--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
   "dependencies": {
     "primeicons": "^6.0.1",
     "primevue": "^3.21.0",
-    "vue": "^3.2.45"
-  },
-  "devDependencies": {
+    "vue": "^3.2.45",
     "@vitejs/plugin-vue": "^4.0.0",
     "vite": "^4.0.0"
   }
