--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "primevue-create-vue-issue-template",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -10,8 +11,10 @@
   "dependencies": {
     "primeicons": "^6.0.1",
     "primevue": "^3.47.2",
-    "vue": "^3.2.45",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "vite": "^4.0.0"
+    "vue": "^3.4.15"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^5.0.3",
+    "vite": "^5.0.11"
   }
 }
